v2024.2.0/en/_sources/overview/roadmap.rst
.. _Roadmap:

==================================================
Roadmap
==================================================

FurisaAI strives to deliver the releases for each month, while offering patch releases.
This page shows the forward-looking roadmap of ongoing & upcoming projects
and when they are expected to land, broken down by areas on :ref:`our software stack <SoftwareStack>`.

**************************************
Latest Recent Release
**************************************

The latest release is 2024.2.0 (beta 0) on December 23, 2024.
You can find the release notes :ref:`here <WhatsNew>`.

**************************************
Future Releases
**************************************

.. note::

   The roadmap is subject to change and may not reflect the final product.


2025.1.0 (beta 1) - January, 2025
==========================================
* Tensor Parallelism support Phase 2: Inter-chip
* Speculating with a draft model
* CPU memory swapping of KV cache in Furiosa LLM
* ``torch.compile()`` backend
* Huggingface Optimum integration
* Embedding API support in Furiosa LLM
* Tool-calling support in Furiosa LLM
* Chunked Prefill support in Furiosa LLM

